<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="230dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"

        android:background="@drawable/saleslinelogo" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImageView"
        android:layout_centerHorizontal="true"
        android:text="@string/login_page"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp" />

    <AutoCompleteTextView

        android:id="@+id/et_Email"

        android:layout_width="match_parent"

        android:layout_height="@dimen/edittext"
        android:layout_below="@+id/loginTextView"


        android:layout_marginBottom="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/text_view_border"
        android:elevation="3dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/et_Password"

        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext"
        android:layout_below="@+id/et_Email"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_view_border"
        android:elevation="2dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="15dp"
        android:singleLine="true"
        android:textColor="@android:color/darker_gray" />


    <Button
        android:id="@+id/btn_LoginButton"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@+id/et_Password"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="30sp"
        android:background="@drawable/button_background"
        android:text="@string/login"

        android:textColor="@drawable/button_text_color" />

    <TextView
        android:id="@+id/forgotPassword"
        style="@style/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_LoginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forget_password"
        android:textColor="@color/colorPrimary" />


</RelativeLayout>