<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@android:color/white">



    <View
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorLine"></View>


    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enquiry Page"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp" />

    <View
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorLine"></View>

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout


            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            
            
            <TextView

                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:elevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:background="@drawable/text_view_border"/>
            <TextView
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:elevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:background="@drawable/text_view_border"/>

            <TextView
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:elevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:background="@drawable/text_view_border"/>

            <TextView
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:elevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:background="@drawable/text_view_border"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:elevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:text="@string/address"
                android:background="@drawable/text_view_border"/>

            <TextView
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:elevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:background="@drawable/text_view_border"/>
        </LinearLayout>
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/photo_image_view"

                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="@drawable/text_view_border" />

                <ImageView
                    android:id="@+id/vc_image_view"
                    android:layout_alignParentRight="true"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:background="@drawable/text_view_border" />

                <TextView
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_below="@+id/photo_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Photo"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="32dp"
                    android:id="@+id/vc_text_view"
                    android:layout_below="@id/vc_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="VC"
                    android:layout_alignParentRight="true"/>

                <Button
                    android:layout_marginTop="12dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/vc_text_view"
                    android:layout_width="150dp"
                    android:layout_height="25dp"
                    android:text="Edit"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:textSize="15sp"/>

            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="62dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:padding="8dp"
                    android:elevation="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:background="@drawable/text_view_border"/>
                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:padding="8dp"
                    android:elevation="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:background="@drawable/text_view_border"/>

                <TextView
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:elevation="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Landline"
                    android:background="@drawable/text_view_border"/>
            </LinearLayout>
        </LinearLayout>





        </LinearLayout>

        <ScrollView
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout


            android:padding="8dp"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/demo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Demo Given on 20/05/2017"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_below="@+id/demo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout

                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

            <TextView
                android:layout_marginTop="16dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Call on 19/05/2014"
                android:textColor="@android:color/black"/>

            <TextView


                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comments ............................................."/>

                </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="H"
                android:background="#ff6400"
                android:textColor="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll2"
                android:layout_below="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout

                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_marginTop="16dp"

                        android:id="@+id/last_call_comments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Last Call on 19/05/2014"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/comments"

                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Comments ............................................."/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="30dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="W"
                    android:background="#fed000"
                    android:textColor="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout

                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_marginTop="16dp"


                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Last Call on 19/05/2014"
                        android:textColor="@android:color/black"/>

                    <TextView


                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Comments ............................................."/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="30dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="C"
                        android:background="#02feff"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>




        </RelativeLayout>
    </ScrollView>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
            android:textSize="15sp"

            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:textColor="@drawable/button_text_color"
            android:background="@drawable/button_background"
            android:text="Call"/>
            <Button
                android:textSize="15sp"

                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:textColor="@drawable/button_text_color"
                android:background="@drawable/button_background"
                android:text="SMS"/>
            <Button
                android:layout_marginLeft="32dp"
                android:textSize="15sp"

                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:textColor="@drawable/button_text_color"
                android:background="@drawable/button_background"
                android:text="Update"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>
